# loginer

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  db.rs  error.rs  globals.rs  lib.rs  main.rs  session.rs  storage.rs  sysinfo.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/[...missing]/: +page.svelte
src/routes/admin/: +page.svelte
src/routes/admin/users/: +page.svelte
src/routes/passwd/: +page.svelte
src/routes/user/: +page.svelte
