[package]
name = "loginer"
version = "1.0.0"
description = "Cool app yo"
authors = ["<ange1o>"]
edition = "2021"

[lib]
name = "loginer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = {version = "0.34.0", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5.3"
chrono = "0.4.40"
keyring = { version = "3.6.2", features = ["windows-native", "linux-native", "apple-native"] }
once_cell = "1.21.3"
rand = "0.8.5"
base64 = "0.22.1"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
log = "0.4.27"
zeroize = "1.8.1"
rsa = {version = "0.9.8", features = ["pem", "sha2"] }
winreg = "0.55.0"
whoami = "1.6.0"
winapi = {version = "0.3.9", features = ["winuser"] }
sysinfo = "0.35.1"
dirs = "6.0.0"
